--- a/scss/layouts/_header.scss
+++ b/scss/layouts/_header.scss
@@ -67,25 +67,22 @@ nav{
             @include boxshadow;
             white-space: nowrap;
         }
-
+/*
         &:first-child a{
-            @media (max-width: 799px) {
-                border-radius:0 $padding-sm  0 0;
-            }
+            @media (max-width: 799px) { border-radius:0 $padding-sm  0 0;}
         }
+        &.last-tab a {
+            @media (max-width: 799px) { border-radius:$padding-sm 0 0 0;}
+        }    
+*/
 
-        &.hidden:not(.active){
+        &.hidden{
             opacity:0;
             position:absolute;left:-100000px;
         }
 
         &:not(.active) a:hover{
             color:$colour--unavail;
-        }    
-        &.last-tab a {
-            @media (max-width: 799px) {
-                border-radius:$padding-sm 0 0 0;
-            }
         }    
         &.active{
             & a {
